# sqlspec

./: .cursorignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .rules  ADAPTER_EXECUTION_REFACTOR_PLAN.md  AGENTS.md  ARCHITECTURE_VALIDATION_REPORT.md  ARROW_UPDATE.md  BUILDER_CLEANUP.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_TODO.md  CONTRIBUTING.rst  COPY_COMMAND.md  DRIVER_ANALYSIS.md  DRIVER_CLEANUP_SUMMARY.md  DRIVER_STANDARDIZATION_PLAN.md  LICENSE.txt  Makefile  NOTICE  PARSE_VS_PARSE_ONE.md  PHASE_3_INTEGRATION_PLAN.md  README.md  REFACTOR.md  SQLSPEC_REFACTORING_PLAN.md  SQL_COMPILE_METHOD.md  SQL_REFACTOR.md  benchmark_dispatch.py  benchmark_pipeline.py  benchmark_repro.py  codecov.yml  demo.py  demo_analysis.py  example_aiosql_integration.py  example_usage.py  fbptpi8etnm6eivoish1qobslgpo9frk  instrumentation_demo.py  integration_test_analysis_complete.md  integration_test_failure_analysis.md  (+12 more)
.claude/: AGENTS.md  README.md  bootstrap.md
.claude/agents/: docs-vision.md  expert.md  planner.md  prd.md  testing.md
.claude/commands/: implement.md  plan.md  review.md  test.md
.claude/skills/: README.md
.claudedocs/reports/: analysis-integration-tests-2024-12-23.md
.cursor/: INNOVATION_MODE_GUIDELINES.md
.cursor/rules/: 00_sqlspec_architecture_summary.mdc
.gemini/: bootstrap.md
.gemini/commands/: implement.toml  prd.toml  review.toml  sync-guides.toml  test.toml
.github/: DOCS_PREVIEW_SETUP.md  dependabot.yml
.github/instructions/: project.instructions.md
.github/workflows/: bench-manual.yml  bench-scheduled.yml  ci.yaml  ci.yml  docs.yml  pgo-validate.yml  publish.yml  release.yaml  test-build.yml
docs/: INTERNAL_REFERENCE.md  PIPELINE_OPTIMIZATION_SUMMARY.md  PYPI_README.md  REFACTORING_DRIVERS.md  REFACTORING_PROCESSORS.md  TESTING_INTEGRATION_RULES.md  TESTING_RULES.md  benchmarking.md  cache_configuration_guide.md  changelog.rst  conf.py  index.rst  known_limitations.md  playground.rst  releases.rst  sql-processing-consistency-implementation-plan.md  sqlglot-best-practices-cheat-sheet.md
docs/_ext/: playground.py  playground_template.html
docs/_static/: custom.css  style.css  versioning.js
docs/_tapes/: migration_workflow.tape  query_builder.tape  quickstart.tape
docs/architecture/: 01-overview.md  15-advanced-features.md  README.md
docs/cheat_sheet/: README.md  mypyc-optimization-guide.md  quick-reference.md  sqlglot-best-practices-cheat-sheet.md  sqlspec-architecture-guide.md  sqlspec-data-flow-guide.md
docs/contributing/: benchmarking.rst  creating_adapters.rst  index.rst
docs/examples/: README.md  __init__.py  adbc_example.py  adk_basic_aiosqlite.py  adk_basic_asyncpg.py  adk_basic_bigquery.py  adk_basic_duckdb.py  adk_basic_mysql.py  adk_basic_sqlite.py  adk_duckdb_user_fk.py  adk_litestar_asyncpg.py  adk_multi_tenant.py  aiosqlite_example.py  arrow_basic_usage.py  asyncmy_example.py  asyncpg_example.py  bigquery_example.py  demo.py  demo_analysis.py  demo_unified_pipeline.py  driver_example.py  duckdb_example.py  enhanced_storage_demo.py  example_aiosql_integration.py  index.rst  instrumentation_example.py  litestar_asyncpg.py  litestar_duckllm.py  litestar_extension_migrations_example.py  litestar_gemini.py  litestar_multi_db.py  litestar_psycopg.py  litestar_session_example.py  litestar_single_db.py  logging_setup_example.py  oracledb_async_example.py  oracledb_sync_example.py  psqlpy_example.py  psycopg_async_example.py  psycopg_sync_example.py  (+11 more)
docs/extensions/: index.rst
docs/getting_started/: index.rst  installation.rst  introduction.rst  quickstart.rst
docs/guides/: README.md  upsert.md
docs/internal/: 001_instrumentation_architecture.md  002_psycopg_driver_modeldtot.md  003_connection_pool_lifecycle.md  004_clean_code_patterns.md  005_driver_protocol_architecture.md  006_configuration_typeddict.md  007_config_driver_protocol_architecture.md  008_sql_builder_system.md  009_sql_factory_api.md  010_aiosql_integration.md  011_sqlstatement_pipeline.md  012_unified_pipeline_deprecated.md  013_critical_debugging_insights.md
docs/migration-guides/: v0.33.0.md  v0.35.0.md
docs/recipes/: dishka.rst  duckdb_lifecycle.rst  index.rst  service_layer.rst
docs/reference/: adapters.rst  base.rst  builder.rst  config.rst  core.rst  dialects.rst  driver.rst  exceptions.rst  extensions.rst  index.rst  loader.rst  migrations.rst  observability.rst  query-stack.rst  storage.rst  typing.rst  utils.rst
docs/usage/: bulk_ingest.rst  cli.rst  configuration.rst  data_dictionary.rst  data_flow.rst  drivers_and_querying.rst  etl.rst  filtering.rst  framework_integrations.rst  index.rst  migrations.rst  observability.rst  performance.rst  query_builder.rst  sql_files.rst  testing.rst
requirements/: README.md  requirements-dev.txt  requirements.txt
requirements/example-feature/: prd.md  recovery.md  tasks.md
scripts/: adbc_alloydb_ingest.py  bench.py
specs/guides/: docs_examples_alignment.md  query-stack.md
sqlspec/: __init__.py  __main__.py  _pgo_training.py  _serialization.py  _sql.py  _typing.py  base.py  cli.py  config.py  configs.py  decorators.py  driver.py  exceptions.py  filters.py  loader.py  mixins.py  parameters.py  protocols.py  service.py  statement.py  typing.py
sqlspec/adapters/: aiosqlite.py  dbapi.py  duckdb.py  sqlite.py
sqlspec/builder/: __init__.py  _base.py  _case.py  _column.py  _ddl.py  _delete.py  _dml.py  _explain.py  _expression_wrappers.py  _factory.py  _generation.py  _insert.py  _join.py  _locking.py  _merge.py  _parsing_utils.py  _select.py  _temporal.py  _update.py  _vector_distance.py  _vector_expressions.py
sqlspec/core/: __init__.py  _correlation.py  _pagination.py  _pool.py  _type_converter.py  cache.py  compiler.py  config.py  config_runtime.py  correlation.py  explain.py  filters.py  hashing.py  metrics.py  parameters.py  (+9 more)
tests/: README.md  conftest.py  test_patterns.py
tools/: benchmark_cache_key.py  benchmark_performance.py  benchmark_results.py  benchmark_sqlglot.py  benchmark_transform.py  fix_documentation.py  local-infra.sh  profiling.py  run_pre_commit.py
(+3360 files in other folders)
